cmake_minimum_required (VERSION 3.4.1)
project (digitalRc)
set (CMAKE_CXX_STANDARD 11)
# Where to find CMake modules and OpenCV
set(OpenCV_DIR "E:\\Projects\\cpp\\opencv\\build")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${OpenCV_DIR}")
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
set(SOURCE ${SOURCE} MinistReader.cpp)
add_executable(digitalRc digitalRc.cxx ${SOURCE})
set( opencv_core opencv_imgproc opencv_highgui opencv_imgcodecs) 
if(WIN32)
  set(OpenCV_LIBS ${OpenCV_LIBS} wsock32 ws2_32)
endif()
target_link_libraries(digitalRc ${OpenCV_LIBS})